# Vimp

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  Converter.py  DirManager.py  Downloader.py  FileManager.py  GerenciaDiretorio.py  Interface.py  LICENSE  ProjectVimp.py  README.md  Vimp Converter.py  Vimp Downloader.py  VimpAPI.py  VimpCLI.py  Vimp_CLI.py  alterar_arte.py  components.json  drizzle.config.ts  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  forge.config.ts  interface.py  jest.config.js  main.py  package.json  performance.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json  webpack.main.config.ts  webpack.plugins.ts  (+1 more)
api/: buildpy.sh  main.py  standalone_cli.py  vimp_api.py  vimp_cli.py
api/modules/: downloader.py  managers.py
app/electron/: main.ts  mainWindow.ts  preload.ts  renderer.ts
app/main/: converter.py  db.ts  dbManager.ts  downloader.py  logger.ts  main.ts  managers.py  menu.ts  preload.ts
app/preload/: db.ts  preload.ts
app/renderer/: index.css  index.html  index.tsx  router.tsx  routes.ts  themes.css
app/src/: App.tsx  Root.tsx  Rotas.tsx  index.css  index.html  index.tsx  router.tsx  routes.ts  store.ts
drizzle/: 0000_big_sue_storm.sql  0002_remove_bitrate_samplerate.sql
drizzle/20260419035107_harsh_adam_warlock/: migration.sql  snapshot.json
drizzle/20260419141751_ambiguous_randall/: migration.sql  (+1 more)
src/: Rotas.tsx  converter.py  downloader.py  index.css  index.tsx  main.ts  managers.py  renderer.ts
(+415 files in other folders)
