[project]
name = "vimp"
version = "0.1.0"
description = "Vimp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "moviepy==1.0.3",
    "music-tag>=0.4.3",
    "pytubefix>=9.3.0",
    "typer>=0.16.0",
    "yt-dlp[default]>=2025.6.30",
]

[dependency-groups]
dev = [
    "auto-py-to-exe>=2.46.0",
]
